# flowcraft-studio

./: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/components/: flowcraft-studio.tsx  mermaid-editor.tsx  mermaid-preview.tsx  template-manager.tsx
src/components/ui/: resizable.tsx
src/hooks/: use-monaco-editor.ts  use-tauri.ts
