[package]
name = "flowcraft-studio"
version = "0.1.0"
description = "FlowCraft Studio - Visual Mermaid Editor"
authors = ["you"]
license = ""
repository = ""
default-run = "flowcraft-studio"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
